Update CSS and Index to display search bar in a nicer way
Updated HTML and CSS so the search bar has more style and color.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,9 @@ html, body {
 #map {
     height: 98vh;
 }
+
+#searchTerm {
+    background-color: #E5F2FF;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
